.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:55:29 **** Build of configuration Debug for project Traveling_Salesman ****
make all 
Building file: ../TSP.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"TSP.d" -MT"TSP.d" -o "TSP.o" "../TSP.c"
Finished building: ../TSP.c
 
Building target: Traveling_Salesman
Invoking: MacOS X C Linker
gcc  -o "Traveling_Salesman"  ./TSP.o   
Finished building target: Traveling_Salesman
 
15:55:47 **** Incremental Build of configuration Debug for project InputTest ****
make all 
Building file: ../src/InputTest.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/InputTest.d" -MT"src/InputTest.d" -o "src/InputTest.o" "../src/InputTest.c"
../src/InputTest.c:16:14: warning: format specifies type 'char *' but the argument has type 'char **' [-Wformat]
        scanf("%s", input);
               ~~   ^~~~~
../src/InputTest.c:16:14: warning: variable 'input' is uninitialized when used here [-Wuninitialized]
        scanf("%s", input);
                    ^~~~~
../src/InputTest.c:15:14: note: initialize the variable 'input' to silence this warning
        char** input;
                    ^
                     = NULL
2 warnings generated.
Finished building: ../src/InputTest.c
 
Building target: InputTest
Invoking: MacOS X C Linker
gcc  -o "InputTest"  ./src/InputTest.o   
Finished building target: InputTest
 
16:08:18 **** Incremental Build of configuration Debug for project Traveling_Salesman ****
make all 
Building file: ../TSP.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"TSP.d" -MT"TSP.d" -o "TSP.o" "../TSP.c"
../TSP.c:45:8: error: initializing 'Node' (aka 'struct node') with an expression of incompatible type 'Node *' (aka 'struct node *'); dereference with *
                Node temp = first;
                     ^      ~~~~~
                            *
../TSP.c:65:7: error: initializing 'Node' (aka 'struct node') with an expression of incompatible type 'Node *' (aka 'struct node *'); dereference with *
        Node temp = first;
             ^      ~~~~~
                    *
../TSP.c:81:7: error: initializing 'Node' (aka 'struct node') with an expression of incompatible type 'Node *' (aka 'struct node *'); dereference with *
        Node temp = first;
             ^      ~~~~~
                    *
3 errors generated.
make: *** [TSP.o] Error 1
16:09:04 **** Incremental Build of configuration Debug for project Traveling_Salesman ****
make all 
Building file: ../TSP.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"TSP.d" -MT"TSP.d" -o "TSP.o" "../TSP.c"
Finished building: ../TSP.c
 
Building target: Traveling_Salesman
Invoking: MacOS X C Linker
gcc  -o "Traveling_Salesman"  ./TSP.o   
Finished building target: Traveling_Salesman
 
16:18:51 **** Incremental Build of configuration Debug for project Traveling_Salesman ****
make all 
Building file: ../TSP.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"TSP.d" -MT"TSP.d" -o "TSP.o" "../TSP.c"
Finished building: ../TSP.c
 
Building target: Traveling_Salesman
Invoking: MacOS X C Linker
gcc  -o "Traveling_Salesman"  ./TSP.o   
Finished building target: Traveling_Salesman
 
13:10:50 **** Build of configuration Debug for project Traveling_Salesman ****
make all 
Building file: ../TSP.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"TSP.d" -MT"TSP.d" -o "TSP.o" "../TSP.c"
../TSP.c:43:8: warning: unused variable 'first' [-Wunused-variable]
                Node first = {x, y, NULL};
                     ^
1 warning generated.
Finished building: ../TSP.c
 
Building target: Traveling_Salesman
Invoking: MacOS X C Linker
gcc  -o "Traveling_Salesman"  ./TSP.o   
Finished building target: Traveling_Salesman
 
19:20:46 **** Incremental Build of configuration Debug for project Traveling_Salesman ****
make all 
Building file: ../TSP.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"TSP.d" -MT"TSP.d" -o "TSP.o" "../TSP.c"
../TSP.c:43:8: warning: unused variable 'first' [-Wunused-variable]
                Node first = {x, y, NULL};
                     ^
1 warning generated.
Finished building: ../TSP.c
 
Building target: Traveling_Salesman
Invoking: MacOS X C Linker
gcc  -o "Traveling_Salesman"  ./TSP.o   
Finished building target: Traveling_Salesman
 
13:37:39 **** Incremental Build of configuration Debug for project Traveling_Salesman ****
make all 
Building file: ../TSP.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"TSP.d" -MT"TSP.d" -o "TSP.o" "../TSP.c"
../TSP.c:133:10: error: initializing 'double' with an expression of incompatible type 'void *'
                double shortDist = NULL;
                       ^           ~~~~
1 error generated.
make: *** [TSP.o] Error 1
13:57:08 **** Incremental Build of configuration Debug for project Traveling_Salesman ****
make all 
Building file: ../TSP.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"TSP.d" -MT"TSP.d" -o "TSP.o" "../TSP.c"
Finished building: ../TSP.c
 
Building target: Traveling_Salesman
Invoking: MacOS X C Linker
gcc  -o "Traveling_Salesman"  ./TSP.o   
Finished building target: Traveling_Salesman
 
